--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>new to blog</title>
-</head>
-<body>
-{{ content }}
-</body>
-</html>
+---
+layout: default
+---
+
+
+<div>
+	{{ content }}
+</div>
