--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,10 @@ layout: default
 ---
 
 
-<div>
-	{{ content }}
+<div class="container">
+	<div class="row">
+		<div class="col-lg-8 col-lg-offset-2">
+			{{ content }}
+		</div>
+	</div>
 </div>
