--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-8 col-lg-offset-2">
-			{{ content }}
-		</div>
-	</div>
-</div>
+{{ content }}
+<ul class="myposts">
+	{% for post in site.posts %}
+	<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+	<span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
+	{% endfor %}
+</ul>
