--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,4 +6,5 @@
     <meta name="keywords"  content="{{ site.keyword }}">
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend:site.baseurl}}">
+    <link rel="stylesheet" href="{{ "css/nav.css" | prepend:site.baseurl}}">
 </head>
