--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
 	{% include header.html %}
-	<body>
-		{{ content }}
+	<body style="background-color: #ddd">
+	<div class="container">
+		{% include nav.html %}
+	  <div class="row">
+	    <div class="col">
+	    </div>
+	    <div class="col-9">
+	      {{content}}
+	    </div>
+	    <div class="col">
+	    </div>
+	 </div>
+	</div>
 	{% include footer.html %}
 	</body>
 </html>
