--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,4 +7,5 @@
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend:site.baseurl}}">
     <link rel="stylesheet" href="{{ "css/nav.css" | prepend:site.baseurl}}">
+    <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
 </head>
