--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,11 +3,26 @@
 <div class="col">
 </div>
 <div class="col-9">
-  <ul id="nav-nav">
-  	<li style="width:100px;height: 30px; background-color: pink; float: left"><a href="{{site.url}}/index.html">首页</a></li>
-  	<li style="width:100px;height: 30px; background-color: pink; float:left"><a href="{{site.url}}/blog.html">博客</a></li>
-  	<li style="width:100px;height: 30px; background-color: pink; float:left"><a href="{{site.url}}/about.html">关于我</a></li>
+  <ul style="list-style: none;margin-top: 30px; position: relative;">
+  	<li style="width:100px;height: 30px;background-color: #000;text-align: center;line-height: 30px;border-radius: 2px;position: absolute; left: 0;"><a href="{{site.url}}/index.html" style="text-decoration: none">首页</a></li>
+  	<li style="width:100px;height: 30px; background-color: #000; position: absolute;left:102px; border-radius: 2px;text-align: center; line-height: 30px"><a href="{{site.url}}/blog.html" style="text-decoration: none">博客</a></li>
+  	<li style="width:100px;height: 30px; background-color: #000;position:absolute; left:204px;border-radius: 2px;text-align: center; line-height: 30px"><a href="{{site.url}}/about.html" style="text-decoration: none">关于我</a></li>
+  	<li style="width:100px;height: 30px; text-align: center; line-height: 30px"><a href="#" style="text-decoration: none"></a></li>
   </ul>
+</div>
+<div class="col">
+</div>
+</div>
+<div class="row">
+<div class="col">
+</div>
+<div class="col-9">
+  
+  <div style="background-color: #000; border-radius: 2px;">
+  	<h1 style="color:#fff; padding-left: 50px; height:80px; line-height: 80px">
+  		Fisherman's Blog
+  	</h1>
+  </div>
 </div>
 <div class="col">
 </div>
