--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,12 +2,12 @@
 <div class="row">
 <div class="col">
 </div>
-<div class="col-9">
-  <ul style="list-style: none;margin-top: 30px; position: relative;">
+<div class="col-9" style="margin-top:30px;">
+  <ul style="list-style: none;position: relative; margin-bottom: 40px">
   	<li style="width:100px;height: 30px;background-color: #000;text-align: center;line-height: 30px;border-radius: 2px;position: absolute; left: 0;"><a href="{{site.url}}/index.html" style="text-decoration: none">首页</a></li>
   	<li style="width:100px;height: 30px; background-color: #000; position: absolute;left:102px; border-radius: 2px;text-align: center; line-height: 30px"><a href="{{site.url}}/blog.html" style="text-decoration: none">博客</a></li>
   	<li style="width:100px;height: 30px; background-color: #000;position:absolute; left:204px;border-radius: 2px;text-align: center; line-height: 30px"><a href="{{site.url}}/about.html" style="text-decoration: none">关于我</a></li>
-  	<li style="width:100px;height: 30px; text-align: center; line-height: 30px"><a href="#" style="text-decoration: none"></a></li>
+  	<!-- <li style="width:100px;height: 30px; text-align: center; line-height: 30px"><a href="#" style="text-decoration: none"></a></li> -->
   </ul>
 </div>
 <div class="col">
