--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="{{ site.description }}">
     <meta name="keywords"  content="{{ site.keyword }}">
     <link rel="shortcut icon" href="">
-    <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend:site.baseurl}}">
-    <link rel="stylesheet" href="{{ "css/nav.css" | prepend:site.baseurl}}">
+    <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend:site.baseurl}}">
+    <link rel="stylesheet" href="{{ "/css/nav.css" | prepend:site.baseurl}}">
     <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
 </head>
